Update version to 1.0.3 in gradle.properties and change opencsv dependency scope to compile in pom.xml. Update plugin.yml version to 0.975.11 and set api-version to 1.21 for compatibility with newer Minecraft versions.